# imchat

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: main.yml
examples/: qq_api_only.py  qq_echo_bot.py  qq_keyboard_bot.py  qq_media_bot.py  wechat_echo_bot.py  wechat_send_message.py
imchat/: keystore.py
imchat/qq/: __init__.py  api.py  auth.py  client.py  config.py  exceptions.py  gateway.py  types.py
imchat/wechat/: __init__.py  api.py  auth.py  cdn.py  client.py  crypto.py  exceptions.py  types.py  utils.py
