[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "imchat"
dynamic = ["version"]
description = ""
readme = "README.md"
authors = [
    {name = "Jiau Zhang", email = "jiauzhang@163.com"},
]
license = {file = "LICENSE"}
classifiers = []
keywords = []
requires-python = ">=3.10"
dependencies = [
    'conippets>=0.1.19',
    'httpx',
]

[project.urls]
Homepage = "https://github.com/jiauzhang/imchat"

[tool.hatch.version]
path = "imchat/version.py"

[tool.hatch.build.targets.wheel]
packages = ["imchat"]
